Help: Override some wiki conversion style and layout

--- a/help/layout.html
+++ b/help/layout.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{{ baseurl }}/normalize.css">
     <link rel="stylesheet" href="{{ baseurl }}/main.css">
     <link rel="stylesheet" href="{{ baseurl }}/public/css/docs.css" >
+    <link rel="stylesheet" href="{{ baseurl }}/help.css" >
 
 </head>
 <body>
