Vis: Export to CSV: Fragment LCIA results (WIP for #195)

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -21,12 +21,13 @@
           tick-property="selected">
     </span>
     </div>
-    <!--<div class="float-block">-->
-        <!--<button type="button" class="btn btn-primary btn-sm" ng-click="selectionConfirmed()"-->
-                <!--ng-disabled="!scenarioSelection.model || scenarioSelection.model.length < 1">-->
-            <!--Display Results-->
-        <!--</button>-->
-    <!--</div>-->
+    <div class="float-block pull-right">
+        <button class="btn btn-default btn-small" ng-csv="csv.data" csv-header="csv.header"
+                filename="csv.fileName" lazy-load="true" ng-click="export()" ng-disabled="disableExport()">
+            Export Results
+        </button>
+
+    </div>
 </div>
 <div ng-if="navigationService">
     <div class="row">
