--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
+    <script src="bower_components/ng-csv/build/ng-csv.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <script src="app.js"></script>
     <script src="components/change-buttons/change-buttons-directive.js"></script>
