--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/isteven-angular-multiselect/isteven-multi-select.js"></script>
     <script src="bower_components/colorbrewer/colorbrewer.js"></script>
     <script src="bower_components/d3/d3.min.js"></script>
@@ -37,7 +38,7 @@
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
-    <script src="bower_components/ng-csv/build/ng-csv.js"></script>
+    <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <script src="app.js"></script>
     <script src="components/change-buttons/change-buttons-directive.js"></script>
