--- a/help/home/index.html
+++ b/help/home/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
   <meta charset="utf-8">
 
-  <title>Home</title>
+  <title>Help - Home</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -48,7 +48,7 @@
 </ul>
 <p>Upon completion in July of 2013, 
 it was desirable for the resulting technical report to be accompanied by an interactive version of the inventory model that was created for the study. However, existing technologies fell short of the agency&#39;s requirements for transparency, cost, and ease of use. A new project was conceived to enable the study&#39;s results to be published openly and at zero cost to data users and members of the public. That project (DRR-13026) began in September, 2013 and concludes in September, 2015. </p>
-<p><img src="https://github.com/uo-lca/CalRecycleLCA/blob/master/FrontEnd/app/img/antelope-small-AL.png" alt="Antelope">is the nickname of the deliverable software elements and specifications for that project.</p>
+<p><img src="img/antelope-small-AL.png" alt="Antelope">is the nickname of the deliverable software elements and specifications for that project.</p>
 
 
       </div>
