--- a/help/layout.html
+++ b/help/layout.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
   <meta charset="utf-8">
 
-  <title>{{ title }}</title>
+  <title>Help - {{ title }}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
