--- a/help/home/Scenario/index.html
+++ b/help/home/Scenario/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
   <meta charset="utf-8">
 
-  <title>Scenario</title>
+  <title>Help - Scenario</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
