--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -47,31 +47,15 @@
     </div>
 </div>
 </div>
-<div class="row">
-<div class="col-md-12">
-    <div class="flow-container" ng-show="graph">
-        <label>Fragment Flows</label>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Source Node</th>
-                <th>Target Node</th>
-                <th>Magnitude</th>
-                <th>Unit</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="f in graph.links">
-                <td>{{f.source.nodeName}}</td>
-                <td>{{f.target.nodeName}}</td>
-                <td>{{f.magnitude | numFormat}}</td>
-                <td>{{f.unit}}</td>
-            </tr>
-            </tbody>
-        </table>
+<div class="panel panel-default" ng-show="graph">
+    <div class="panel-heading">
+        <span class="panel-title">Fragment Flows</span>
+    </div>
+    <div class="panel-body">
+        <param-grid options="options" data="gridFlows" columns="columns" params="params"></param-grid>
     </div>
 </div>
-</div>
+
 
 
 
