Vis: Fragment Flows grid (#215)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -47,7 +47,8 @@
     </div>
 </div>
 </div>
-<div class="panel panel-default" ng-show="graph">
+<br>
+<div class="panel panel-default" ng-if="gridFlows.length">
     <div class="panel-heading">
         <span class="panel-title">Fragment Flows</span>
     </div>
