Doc: LCIA help page (#216)

--- a/help/home/Fragment/index.html
+++ b/help/home/Fragment/index.html
@@ -30,6 +30,7 @@
           <ul>
               <li><a href="&#x2F;Fragment&#x2F;">Fragment</a></li>
               <li><a href="&#x2F;">Home</a></li>
+              <li><a href="&#x2F;LCIA&#x2F;">LCIA</a></li>
               <li><a href="&#x2F;Scenario&#x2F;">Scenario</a></li>
           </ul>
       </div>
