--- a/help/home/index.html
+++ b/help/home/index.html
@@ -30,13 +30,19 @@
           <ul>
               <li><a href="&#x2F;Fragment&#x2F;">Fragment</a></li>
               <li><a href="&#x2F;">Home</a></li>
+              <li><a href="&#x2F;LCIA&#x2F;">LCIA</a></li>
               <li><a href="&#x2F;Scenario&#x2F;">Scenario</a></li>
           </ul>
       </div>
 
       <div class="wikiconvertor-content wikistyle relative">
 
-          <p>Used Oil LCA is an online tool for assessing and visualizing the environmental impacts associated with recycling used motor oil. The life cycle of used motor oil is modeled with scenarios and fragments. Model components can be altered using scenario parameters.</p>
+          <p>Used Oil LCA is an online tool to facilitate life cycle assessment of used motor oil in California.
+Life cycle is modeled with the following constructs.</p>
+<ul>
+<li><a href="Fragment/">Fragment</a></li>
+<li><a href="Scenario/">Scenario</a></li>
+</ul>
 <h2 id="project-origin">Project Origin</h2>
 <p>In 2009 the California Senate passed a law, known as SB 546, which changed how the state regulated the management of used motor oil. In order to support future policy making, the bill required the state to perform a life cycle assessment of the used oil management system in place. That study was conducted by researchers at the University of California, Santa Barbara, in collaboration with a group of industry stakeholders, a panel of critical reviewers, and several consulting firms. The study was overseen by the California Department of Resources Recycling and Recovery (CalRecycle). The study resulted in a number of technical documents available online:</p>
 <ul>
