--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="components/sankey/sankey.css">
     <link rel="stylesheet" href="components/waterfall/waterfall-chart.css">
     <link rel="stylesheet" href="app.css">
+    <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16">
 
     <!--Use CDN when network connection is more reliable -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
