Vis: grunt release build, partially working (#202)

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="components/waterfall/waterfall-directive.js"></script>
     <script src="components/waterfall/waterfall-service.js"></script>
     <script src="lcia-method/lcia-method-detail.js"></script>
+    <script src="template/placeholder.js"></script>
 
 </head>
 <body ng-app="lcaApp">
