--- a/bld/index.html
+++ b/bld/index.html
@@ -22,8 +22,8 @@
     <!--Use CDN for popular libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
     <script type="text/javascript" src="_bower.js"></script>
+    <script type="text/javascript" src="plugins.min.js"></script>
     <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="<%= grunt.config.get('pkg.name') %>.min.js"></script>
 
