--- a/bld/index.html
+++ b/bld/index.html
@@ -13,7 +13,7 @@
     <title>Used Oil LCA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="_bower.css"/>
     <link rel="stylesheet" type="text/css" href="<%= grunt.config.get('pkg.name') %>.css"/>
 
@@ -23,9 +23,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script type="text/javascript" src="_bower.js"></script>
-    <script type="text/javascript" src="plugins.min.js"></script>
+    <script type="text/javascript" src="tp.min.js"></script>
     <script type="text/javascript" src="config.js"></script>
-    <script type="text/javascript" src="<%= grunt.config.get('pkg.name') %>.min.js"></script>
+    <script type="text/javascript" src="<%= grunt.config.get('appFile') %>"></script>
+
 
 </head>
 <body ng-app="lcaApp">
