--- a/bld/index.html
+++ b/bld/index.html
@@ -17,16 +17,15 @@
     <link rel="stylesheet" type="text/css" href="_bower.css"/>
     <link rel="stylesheet" type="text/css" href="<%= grunt.config.get('pkg.name') %>.css"/>
 
-    <link rel="icon" type="image/png" href="../app/favicon.ico" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16">
 
     <!--Use CDN for popular libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script type="text/javascript" src="_bower.js"></script>
-    <script type="text/javascript" src="tp.min.js"></script>
+    <script type="text/javascript" src="plugins.min.js"></script>
+    <script type="text/javascript" src="<%= grunt.config.get('minFile') %>"></script>
     <script type="text/javascript" src="config.js"></script>
-    <script type="text/javascript" src="<%= grunt.config.get('appFile') %>"></script>
-
 
 </head>
 <body ng-app="lcaApp">
