Help: h5bp-docs results

--- a/help/home/Fragment/index.html
+++ b/help/home/Fragment/index.html
@@ -40,8 +40,8 @@
           <p>A life cycle inventory fragment is a piece of a life cycle inventory model.  A fragment  can be described as a set of nodes connected by links without any loops.
     Each node in a fragment is either a process, a sub-fragment, or an input or output flow that is exchanged with the external world.  A fragment has an implicit 
     &quot;system boundary&quot; defined by the nodes it contains.  Input or output flows cross the system boundary.</p>
-<p><img src="/img/UOM-fragment.png" alt="Fragment Sankey Diagram">
-<strong>A Fragment showing the top level of the Used Oil Management LCI model.</strong></p>
+<p><img src="/img/UOM-fragment.png" alt="Fragment Sankey Diagram"></p>
+<p><strong>A Fragment showing the top level of the Used Oil Management LCI model.</strong></p>
 <h2 id="fragment-flows">Fragment Flows</h2>
 <p>This view displays fragment nodes and edges with a sankey diagram. Hover over a node to see a tool-tip displaying the node
  type and name.</p>
