--- a/help/home/LCIA/index.html
+++ b/help/home/LCIA/index.html
@@ -28,6 +28,7 @@
     <div id="body">
       <div class="wikiconvertor-pages">
           <ul>
+              <li><a href="&#x2F;Editing-Parameters&#x2F;">Editing Parameters</a></li>
               <li><a href="&#x2F;Fragment&#x2F;">Fragment</a></li>
               <li><a href="&#x2F;">Home</a></li>
               <li><a href="&#x2F;LCIA&#x2F;">LCIA</a></li>
@@ -101,7 +102,9 @@ and only cumulative LCIA results are shown.</p>
 associated with
 the selected process flows. In each bar chart, elementary flows are sorted in descending order by LCIA result. 
 Positive results too small to display are grouped together as Aggregate flow.</p>
-<p>Click on the Flow Details button to see all of the process&#39; elementary flows and associated parameters.</p>
+<p>Click on the Flow Details button to navigate to the LCIA Flow Details view.</p>
+<h3 id="lcia-flow-details">LCIA Flow Details</h3>
+<p>This view displays elementary process flows and scenario parameters that override default emission/dissipation factors. </p>
 
 
       </div>
