--- a/help/home/index.html
+++ b/help/home/index.html
@@ -28,6 +28,7 @@
     <div id="body">
       <div class="wikiconvertor-pages">
           <ul>
+              <li><a href="&#x2F;Editing-Parameters&#x2F;">Editing Parameters</a></li>
               <li><a href="&#x2F;Fragment&#x2F;">Fragment</a></li>
               <li><a href="&#x2F;">Home</a></li>
               <li><a href="&#x2F;LCIA&#x2F;">LCIA</a></li>
