Doc: directive attributes

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -1,3 +1,4 @@
+<!-- HTML template for Fragment Flows view-->
 <div ng-if="navigationService===null">
     <dl class="dl-horizontal">
         <dt>Fragment</dt>
