Vis: Scenario Detail: Display Reference Flow and Unit (#224)

--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -15,6 +15,10 @@
             </dd>
             <dt>Activity Level</dt>
             <dd>{{scenario.activityLevel | numFormat}}</dd>
+            <dt>Reference Flow</dt>
+            <dd>{{referenceFlow.name}}</dd>
+            <dt>Reference Unit</dt>
+            <dd>{{unit}}</dd>
         </dl>
     </div>
 </div>
