--- a/app/scenario/scenario-edit.html
+++ b/app/scenario/scenario-edit.html
@@ -1,28 +1,56 @@
-<form name="form" novalidate >
+<form name="form" class="form-horizontal" novalidate xmlns="">
     <legend ng-show="scenario.scenarioID">Edit Scenario</legend>
     <legend ng-hide="scenario.scenarioID">New Scenario</legend>
     <div class="form-group required">
-        <label for="inputName">Name</label>
-        <input type="text" class="form-control" id="inputName" ng-model="scenario.name" required>
+        <label for="inputName" class="col-sm-3 control-label">Name</label>
+
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="inputName" ng-model="scenario.name" maxlength="50" required>
+        </div>
     </div>
 
     <div class="form-group required">
-        <label for="selectFragment">Top Level Fragment</label>
-        <select id="selectFragment" class="form-control" ng-model="scenario.topLevelFragmentID"
-                    ng-options="fragment.fragmentID as fragment.name for fragment in fragments" required></select>
+        <label for="selectFragment" class="col-sm-3 control-label">Top Level Fragment</label>
+
+        <div class="col-sm-9">
+            <select id="selectFragment" class="form-control" ng-model="scenario.topLevelFragmentID"
+                    ng-options="fragment.fragmentID as fragment.name for fragment in fragments"
+                    ng-change="onFragmentChange()"
+                    required></select>
+        </div>
     </div>
 
     <div class="form-group">
-        <label for="inputAL">Activity Level</label>
-        <input type="number" class="form-control" id="inputAL" ng-model="scenario.activityLevel" >
+        <label for="inputAL" class="col-sm-3 control-label">Activity Level</label>
+
+        <div class="col-sm-3">
+            <input type="number" class="form-control" id="inputAL" ng-model="scenario.activityLevel">
+        </div>
     </div>
 
-    <div class="form-group pull-right" >
-        <button type="submit" class="btn btn-primary" ng-disabled="form.$submitted || form.$invalid" ng-click="save()">
-            Save
-        </button>
-        <button type="button" class="btn btn-default" ng-disabled="form.$submitted" ng-click="revertChanges()">
-            Cancel
-        </button>
+    <div class="form-group">
+        <label for="referenceFlowName" class="col-sm-3 control-label">Reference Flow</label>
+        <div class="col-sm-9">
+            <p class="form-control" type="text" id="referenceFlowName" readonly>{{referenceFlow.name}}</p>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="referenceUnit" class="col-sm-3 control-label">Reference Unit</label>
+        <div class="col-sm-3">
+            <p class="form-control" type="text" id="referenceUnit" readonly>{{unit}}</p>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-9 pull-right">
+            <button type="submit" class="btn btn-primary" ng-disabled="form.$submitted || form.$invalid"
+                    ng-click="save()">
+                Save
+            </button>
+            <button type="button" class="btn btn-default" ng-disabled="form.$submitted" ng-click="revertChanges()">
+                Cancel
+            </button>
+        </div>
     </div>
 </form>
