--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <script src="components/format/format.js"></script>
     <script src="components/fragment-navigation/fragment-navigation-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
+    <script src="components/info/info-directive.js"></script>
     <script src="components/lcia-detail/lcia-bar-directive.js"></script>
     <script src="components/lcia-detail/lcia-detail-service.js"></script>
     <script src="components/modal/modal-confirm.js"></script>
