Vis: Sankey: Consolidate color mapping (prep for #217)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -34,7 +34,7 @@
     <div class="col-md-4">
         <svg>
             <g>
-            <rect height="10" width="10" fill="{{color.range[0]}}"></rect>
+            <rect height="10" width="10" fill="green"></rect>
             </g>
         </svg>
     </div>
@@ -49,7 +49,7 @@
 <div class="col-md-12">
     <div class="sankey-container">
         <!--suppress HtmlUnknownTag -->
-        <sankey-diagram graph="graph" color="color" selected-node="selectedNode"
+        <sankey-diagram graph="graph" selected-node="selectedNode"
                         mouse-over-node="mouseOverNode"></sankey-diagram>
     </div>
 </div>
