First attempt at #231

--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -1,6 +1,7 @@
 <!-- Partial html for Process Instance view -->
 
 
+<info msg="{{infoMsg.processInstance.msg}}"></info>
 <h4>Process Instance</h4>
 <dl class="dl-horizontal">
     <dt>Scenario</dt>
