--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,12 +1,12 @@
 <!-- Partial html for home page -->
-<info msg="{{infoMsg.home.msg}}"></info>
+<info ng-show="displayInfo">{{infoMsg.home.msg}}</info>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span class="panel-title">Scenarios</span>
         <button class="btn btn-default btn-sm pull-right" ng-show="canCreate" ng-click="createScenario()">New</button>
         <div class="clearfix"></div>
     </div>
-    <info msg="{{infoMsg.home.scenarios.msg}}"></info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.msg}}</info>
     <table class="table table-condensed">
         <thead>
         <tr>
@@ -47,7 +47,7 @@
     <div class="panel-heading">
         <span class="panel-title">LCIA Methods</span>
     </div>
-    <info msg="{{infoMsg.home.lciaMethods.msg}}"></info>
+    <info ng-show="displayInfo">{{infoMsg.home.lciaMethods.msg}}</info>
     <table class="table table-condensed">
         <thead>
         <tr>
