--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                <button type="button" class="btn btn-default navbar-btn active" data-toggle="button" ng-click="displayInfo=!displayInfo" aria-pressed="{{displayInfo}}">
+                <button title="Toggle Information Messages" type="button" ng-class="{btn:true, 'navbar-btn':true, 'btn-primary':displayInfo, active:displayInfo}" data-toggle="button" ng-click="displayInfo=!displayInfo" aria-pressed="{{displayInfo}}">
                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 </button>
                 </li>
