Vis: Process Dissipation: Get resources (for #236)

--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -33,7 +33,7 @@
         </span>
     </div>
     <div class="panel-body">
-        <param-grid options="options" data="gridFlows" columns="columns" params="params"></param-grid>
+        <param-grid options="options" data="fragmentFlows" columns="columns" params="params"></param-grid>
     </div>
 </div>
 
