--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -8,6 +8,8 @@
         <dl class="dl-horizontal">
             <dt>Name</dt>
             <dd>{{scenario["name"]}}</dd>
+            <dt>Description</dt>
+            <dd>{{scenario["description"]}}</dd>
             <dt>Top Level Fragment</dt>
             <dd><a ui-sref="home.fragment-sankey({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
                 {{fragment.name}}
