--- a/app/scenario/scenario-edit.html
+++ b/app/scenario/scenario-edit.html
@@ -8,7 +8,12 @@
             <input type="text" class="form-control" id="inputName" ng-model="scenario.name" maxlength="50" required>
         </div>
     </div>
-
+    <div class="form-group">
+        <label for="inputDesc" class="col-sm-3 control-label">Description</label>
+        <div class="col-sm-9">
+            <textarea class="form-control" id="inputDesc" ng-model="scenario.description" rows="4"></textarea>
+        </div>
+    </div>
     <div class="form-group required">
         <label for="selectFragment" class="col-sm-3 control-label">Top Level Fragment</label>
 
